--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "symfony/console": "~2.5|~3.0",
         "symfony/process": "~2.5|~3.0",
         "symfony/filesystem": "~2.5|~3.0",
-        "henrikbjorn/lurker": "~1.0"
+        "henrikbjorn/lurker": "*"
     },
     "require-dev": {
         "patchwork/jsqueeze": "~1.0",
